--- a/index.html/index.html
+++ b/index.html/index.html
@@ -11,11 +11,11 @@
 <p>
 i love u babe ... i love u so much  💖<br>
 .<br>
-Main hamesha tumhare saath rahunga aur tumhe hamesha khush rakhunga.<br>
+Happy Birthday, my love! You make every day brighter just by being you.<br>
 I Love You Forever 😘
 </p>
 
-<button onclick="window.location.href='surprise.html'">Click For Surprise 💌</button>
+<button onclick="window.location.href='surprise.html'">Babe click here!! 💌</button>
 
 <div class="kiss">💋</div>
 
@@ -26,6 +26,7 @@ for(let i=0;i<100;i++){
     heart.innerHTML = "❤️";
     heart.classList.add("heart");
     heart.style.left = Math.random() * 100 + "vw";
+    heart.style.buttom=Math.random()*50;
     heart.style.fontSize = (Math.random() * 30 + 20) + "px";
     heart.style.animationDuration = (Math.random() * 3 + 3) + "s";
     document.body.appendChild(heart);
@@ -33,4 +34,5 @@ for(let i=0;i<100;i++){
 </script>
 
 </body>
+
 </html>
