--- a/index.html/surprise.html
+++ b/index.html/surprise.html
@@ -9,10 +9,16 @@
 <h1>My Beautiful ❤️</h1>
 
 <p>
-Happy Birthday meri jaan 💖<br>
-Tum meri life ka sabse special part ho.<br>
-Main hamesha tumhare saath rahunga.<br>
-Tumhari smile meri duniya hai.<br>
+Happy Birthday babe jiii future wife jii 💖<br>
+Happy Birthday, my love! You make every day brighter just by being you.”
+
+“Wishing the most amazing birthday to the girl who stole my heart.”</br>
+
+“Happy Birthday! I’m so lucky to have you in my life, today and always.”<br>
+
+“To my beautiful girlfriend, may your day be as sweet and special as you are.”<br>
+
+“Happy Birthday, babe! Here’s to more smiles, hugs, and unforgettable memories together.<br>
 I Love You Forever 😘
 </p>
 
@@ -31,4 +37,5 @@ for(let i=0;i<100;i++){
 </script>
 
 </body>
+
 </html>
